--- a/background-repeat.html
+++ b/background-repeat.html
@@ -3,18 +3,15 @@
 <head>
 <style>
 body {
-  background-repeat: repeat-y;
+  background-repeat: repeat-xy;
   background-image: url("img_flwr.gif");  
 }  
 </style>
 </head>
 <body>
-
-<h1>The background-repeat Property</h1>
-
+<h1>The background-repeat Property use repeat-x,repeat-y</h1>
 <p>
 This demo shows how to specify how the background image can be repeated.
 </p>
-
 </body>
 </html>
