--- a/ex.html
+++ b/ex.html
@@ -1,10 +1,20 @@
-<html><head>
-   <link href="1.css" rel="stylesheet"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>External CSS Example</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking external CSS -->
 </head>
-    <body>
-        <h1>Good morning</h1>
-        <h2>Good morning</h2>
-        <h2>Good morning</h2>
-        <h3 style="font-size: 12;text-align: right;">good nghts</h3>
-    </body>
+<body>
+
+    <h1>Welcome to My Website</h1>
+    <p>This is an example of an HTML page with an external stylesheet.</p>
+    
+    <h2>About Us</h2>
+    <p>We provide high-quality content and tutorials.</p>
+    
+    <a href="https://www.example.com">Visit our website</a>
+
+</body>
 </html>
