--- a/quizjs.html
+++ b/quizjs.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Quiz</title>
+   <title>Interactive Quiz</title>
     <script>
         // Function to calculate the score
         function calculateScore() {
             var score = 0;
-
             // Check for answers using getElementsByName
             var q0 = document.getElementsByName("q0");
             for (var i = 0; i < q0.length; i++) {
-                if (q0[i].checked && q0[i].value === '0') {
+                if (q0[i].checked && q0[i].value === '0')
+                 {
                     score++;
                 }
             }
-
             var q1 = document.getElementsByName("q1");
             for (var i = 0; i < q1.length; i++) {
                 if (q1[i].checked && q1[i].value === '1') {
